# MWT-and-TST-Implementation

data/: .freq_dict.txt.icloud  .unique_freq_dict.txt.icloud
src/: autocomplete.cpp
src/DictionaryTrie/: DictionaryTrie.cpp  DictionaryTrie.hpp  MWTNode.hpp  meson.build
test/: test_DictionaryTrie.cpp
